# stiftsmodel-app

./: PDF_FILNAVN_AUDIT_v23_4.txt  README.md  README.txt  RELEASE_NOTES_v24_0_1.txt  RELEASE_NOTES_v24_1.txt  V23_9_AUDIT.txt  VERSION.txt  app.py  pyproject.toml  requirements-deprecated.txt  requirements.txt  start_windows.bat  streamlit_app.py  streamlit_app_old.py
.devcontainer/: devcontainer.json
core/: __init__.py  config.py  data_loader.py  filenames.py  map_rendering.py  metrics.py  pdf_export.py  scenarios.py  validation.py
data/: 2040_fordelingsdokumentation.xlsx  DATAKILDER.txt  provstidata.xlsx  provstidata_master_v25.xlsx
data/bilag/gamle_data/: KVALITETSRAPPORT_LANDSMODEL_v21.txt  KVALITETSRAPPORT_LANDSMODEL_v22.txt  KVALITETSRAPPORT_PROVSTIDATA_v23_1.txt  Kirker.xlsx  Kopi af 2026 - landskirkeskat og ligning.xlsx  ikke_matchede_reference_sogne_v21.csv  ikke_matchede_shapefile_sogne_v21.csv  provsti_sogn_reference.txt  provsti_sogn_reference_landsdaekkende.csv  provsti_sogn_reference_landsdaekkende_inkl_udland.csv  provsti_sogn_reference_landsdaekkende_inkl_udland_og_historik.csv  provstidata_master_v24.xlsx  provstidata_v29_2_hele_danmark_korrigeret.xlsx  referenceposter_uden_dansk_sognepolygon_v22.csv  sognepolygoner_uden_reference_v22.csv  standard_tilknytning.csv
data/bilag/kilder/: Bilag 2 - Forslag om ændring af stiftsgrænser i tal{F2#20089973#5#20089950#9} (1).docx  Kopi af Tabel vedr. stifter og provstier slut torsdag.xlsx
