[project]
name = "Nøgletal Folkekirken - Stiftsmodellen vers. 25"
version = "25.1.0"
description = "Nøgletal Folkekirken - Stiftsmodellen."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.58.0",
    "pandas>=2.3",
    "openpyxl>=3.1",
    "geopandas>=1.1"
]

[tool.uv]
package = false
