[project]
name = "blank-app-template"
version = "25.1.0"
description = "Nøgletal Folkekirken - Stiftsmodellen."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.58.0",
    "pandas>=2.3",
    "openpyxl",
    "geopandas",
    "matplotlib",
    "shapely",
    "pyproj",
    "reportlab",
]

[tool.uv]
package = false

[tool.uv.sources]
geopandas = { git = "https://github.com/geopandas/geopandas" }
